minor ui changes and adjustments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,35 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+  align-content: center;
 }
 
 .card {
@@ -112,7 +84,7 @@ body.dark-mode .response {
   color: var(--text-dark);
 }
 
-.toggle-button {
+.toggle-themes-button {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -129,4 +101,16 @@ body.dark-mode .response {
 
 .toggle-button:hover {
   background-color: #357abd;
+}
+
+#user-input-entry{
+  width: 100%;
+  font-size: 1rem;
+  padding: 6px;
+}
+
+#budget{
+  width: 100%;
+  font-size: 1rem;
+  padding: 6px;
 }
